--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,16 +8,39 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/employee"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/paper"
-        android:contentDescription="@string/app_name" />
-    <ImageView
-        android:id="@+id/employer"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/paper"
-        android:contentDescription="@string/app_name" />
+        android:id="@+id/iv_black"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="170dp"
+        android:scaleType="centerInside"
+        android:src="@color/black" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
+        android:layout_marginTop="50dp">
+
+        <Button
+            android:id="@+id/btn_boss"
+            android:layout_width="125dp"
+            android:layout_height="125dp"
+            android:text="雇主"
+            android:textSize="30sp"
+            android:layout_marginRight="40dp"
+            android:textColor="@color/white"
+            android:background="#BF09302C"/>
+
+        <Button
+            android:id="@+id/btn_employee"
+            android:layout_width="125dp"
+            android:layout_height="125dp"
+            android:text="員工"
+            android:textSize="30sp"
+            android:textColor="@color/white"
+            android:background="#BF09302C"/>
+    </LinearLayout>
 
 </LinearLayout>
