--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/iv_black"
+        android:id="@+id/iv_avatar"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_gravity="center_horizontal"
@@ -42,5 +42,4 @@
             android:textColor="@color/white"
             android:background="#BF09302C"/>
     </LinearLayout>
-
 </LinearLayout>
