--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,7 @@
             android:text="帳號:"
             android:textSize="30sp"/>
         <EditText
-            android:id="@+id/et_AN"
+            android:id="@+id/et_user"
             android:layout_width="275dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20sp"/>
@@ -40,13 +40,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="密碼:"
-            android:textSize="30sp"/>.
+            android:textSize="30sp"/>
         <EditText
-            android:id="@+id/et_PW"
+            android:id="@+id/et_pwd"
             android:layout_width="275dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20sp"/>.
     </LinearLayout>
+    <TextView
+        android:id="@+id/tv_error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginEnd="50dp"
+        android:textColor="@color/red"/>
         <Button
             android:id="@+id/btn_login"
             android:layout_marginHorizontal="10sp"
