--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,12 @@
 
     <ImageView
         android:id="@+id/iv_avatar"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="170dp"
         android:scaleType="centerInside"
-        android:src="@color/black" />
+        android:background="#EEEEEE"/>
 
     <LinearLayout
         android:layout_width="match_parent"
