--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,8 @@
             android:id="@+id/et_user"
             android:layout_width="275dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20sp"/>
+            android:layout_marginBottom="20sp"
+            android:inputType="text"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
@@ -45,7 +46,8 @@
             android:id="@+id/et_pwd"
             android:layout_width="275dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20sp"/>
+            android:layout_marginBottom="20sp"
+            android:inputType="textPassword"/>
     </LinearLayout>
     <TextView
         android:id="@+id/tv_error"
