--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,23 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:orientation="vertical">
-
     <ImageView
-        android:id="@+id/iv_avatar"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:id="@+id/iv_black"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="170dp"
         android:scaleType="centerInside"
-        android:background="#EEEEEE"/>
-
+        android:src="@drawable/black" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
         android:layout_marginTop="50dp">
-
         <Button
             android:id="@+id/btn_boss"
             android:layout_width="125dp"
@@ -31,8 +28,7 @@
             android:textSize="30sp"
             android:layout_marginRight="40dp"
             android:textColor="@color/white"
-            android:background="#BF09302C"/>
-
+            android:background="@color/theme"/>
         <Button
             android:id="@+id/btn_employee"
             android:layout_width="125dp"
@@ -40,6 +36,6 @@
             android:text="員工"
             android:textSize="30sp"
             android:textColor="@color/white"
-            android:background="#BF09302C"/>
+            android:background="@color/theme"/>
     </LinearLayout>
 </LinearLayout>
