--- a/app/src/main/res/layout/fragment_e__bulletin.xml
+++ b/app/src/main/res/layout/fragment_e__bulletin.xml
@@ -1,14 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".E_BulletinFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    tools:context=".MainActivity">
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/topAppBar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:title="公告"
+                app:titleTextColor="#FFFFFF"
+                android:background="@color/theme"
+                app:menu="@menu/nav_drawer_menu"
+                app:navigationIcon="@drawable/ic_menu"/>
+        </com.google.android.material.appbar.AppBarLayout>
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="204dp"
+            android:layout_height="607dp"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        </androidx.core.widget.NestedScrollView>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-</FrameLayout>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="0dp"
+        android:layout_height="67dp"
+        android:background="@android:color/background_light"
+        app:itemTextColor="@color/black"
+        app:labelVisibilityMode="labeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:menu="@menu/bottom_nav_menu" />
+    <FrameLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+        <TextView
+            android:layout_width="390dp"
+            android:layout_height="285dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="70dp"
+            android:background="@drawable/grey_framerectangle" />
+        <TextView
+            android:layout_marginTop="80dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="推播通知"
+            android:gravity="center_horizontal"
+            android:textSize="20sp"/>
+        <ListView
+            android:id="@+id/diary_list2"
+            android:layout_marginTop="70dp"
+            android:layout_marginStart="20dp"
+            android:gravity="center_horizontal"
+            android:layout_width="380dp"
+            android:layout_height="280dp" />
+        <TextView
+            android:layout_width="390dp"
+            android:layout_height="285dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="365dp"
+            android:background="@drawable/grey_framerectangle" />
+        <TextView
+            android:layout_marginTop="375dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="個人通知"
+            android:gravity="center_horizontal"
+            android:textSize="20sp"/>
+        <ListView
+            android:id="@+id/diary_list3"
+            android:layout_marginTop="370dp"
+            android:layout_marginStart="20dp"
+            android:gravity="center_horizontal"
+            android:layout_width="380dp"
+            android:layout_height="280dp" />
+    </FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
