change: E_punch\bulletin\salary style login style

--- a/app/src/main/res/layout/activity_employee.xml
+++ b/app/src/main/res/layout/activity_employee.xml
@@ -16,7 +16,7 @@
                 android:id="@+id/topAppBar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:title="薪資計算"
+                app:title="首頁"
                 app:titleTextColor="#FFFFFF"
                 android:background="@color/theme"
                 app:menu="@menu/nav_drawer_menu"
@@ -39,35 +39,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:menu="@menu/bottom_nav_menu" />
-    <FrameLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="100dp">
-            <TextView
-                android:id="@+id/tv_salary"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:gravity="center"
-                android:text="@string/tv_salary"
-                android:textColor="#FFFFFF"
-                android:layout_marginEnd="20dp"
-                android:background="@drawable/greygreen_green_oval"/>
-            <TextView
-                android:id="@+id/tv_day"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:gravity="center"
-                android:text="@string/tv_day"
-                android:background="@drawable/green_white_oval"/>
-        </LinearLayout>
-    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
