--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,13 @@
     tools:context=".MainActivity"
     android:orientation="vertical">
     <ImageView
-        android:id="@+id/iv_black"
+        android:id="@+id/iv_avatar"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="170dp"
         android:scaleType="centerInside"
-        android:src="@drawable/black" />
+        android:src="@drawable/black"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
