--- a/app/src/main/res/layout/fragment_salary.xml
+++ b/app/src/main/res/layout/fragment_salary.xml
@@ -47,7 +47,7 @@
         app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:menu="@menu/bottom_nav_menu_er" />
+        app:menu="@menu/bottom_nav_menu" />
 
     <FrameLayout
         android:layout_width="0dp"
