--- a/app/src/main/res/layout/fragment_e__punch.xml
+++ b/app/src/main/res/layout/fragment_e__punch.xml
@@ -15,7 +15,7 @@
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/topAppBar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="@android:dimen/app_icon_size"
                 app:title="打卡"
                 app:titleTextColor="#FFFFFF"
                 android:background="@color/theme"
@@ -30,18 +30,14 @@
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <FrameLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@android:dimen/app_icon_size">
         <TextView
             android:id="@+id/tv_now"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="20dp"
             android:gravity="center_horizontal"
             android:textSize="30sp"
             android:text="現在時間"/>
@@ -49,7 +45,7 @@
             android:id="@+id/btn_punch"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="80dp"
             android:layout_gravity="center_horizontal"
             android:textColor="#FFFFFF"
             android:background="@drawable/black_rectangle"
@@ -59,18 +55,9 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView_punch"
             android:layout_width="match_parent"
-            android:layout_height="500dp"
-            android:layout_marginTop="250dp"
+            android:layout_height="450dp"
+            android:layout_marginTop="100dp"
+            android:layout_marginBottom="60dp"
             android:layout_gravity="bottom"/>
     </FrameLayout>
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigationView"
-        android:layout_width="0dp"
-        android:layout_height="67dp"
-        android:background="@android:color/background_light"
-        app:itemTextColor="@color/black"
-        app:labelVisibilityMode="labeled"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:menu="@menu/bottom_nav_menu"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
