--- a/app/src/main/res/layout/recycler_punch_item.xml
+++ b/app/src/main/res/layout/recycler_punch_item.xml
@@ -14,7 +14,7 @@
         android:layout_marginBottom="20dp"
         android:src="@drawable/black"
         android:text="ID"
-        android:textSize="30sp"
+        android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
@@ -23,10 +23,10 @@
         android:id="@+id/tv_work"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="10dp"
         android:text="上班"
         android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
-        android:textSize="30sp"
+        android:textSize="25sp"
         app:layout_constraintStart_toEndOf="@id/tv_id"
         app:layout_constraintTop_toTopOf="@id/tv_id"
         app:layout_constraintBottom_toBottomOf="@id/tv_id"/>
@@ -37,7 +37,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="150dp"
-        android:text="2022/05/22 00:00:00"
+        android:text=""
         android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@id/tv_work"
