--- a/app/src/main/res/layout/recycler_punch_item.xml
+++ b/app/src/main/res/layout/recycler_punch_item.xml
@@ -12,21 +12,20 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
-        android:src="@drawable/black"
         android:text="ID"
-        android:textSize="25sp"
+        android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
-        android:textSize="13sp"/>
+    android:textSize="13sp"/>
     <TextView
-        android:id="@+id/tv_work"
+        android:id="@+id/tv_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:text="上班"
+        android:layout_marginStart="20dp"
+        android:text="2022-05-27"
         android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
-        android:textSize="25sp"
+        android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@id/tv_id"
         app:layout_constraintTop_toTopOf="@id/tv_id"
         app:layout_constraintBottom_toBottomOf="@id/tv_id"/>
@@ -34,12 +33,24 @@
         android:id="@+id/tv_time"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="150dp"
-        android:text=""
+        android:layout_marginStart="20dp"
+        android:text="00:00:00"
         android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@id/tv_work"
-        app:layout_constraintTop_toTopOf="@id/tv_id"/>
+        app:layout_constraintStart_toEndOf="@id/tv_date"
+        app:layout_constraintTop_toTopOf="@id/tv_id"
+        app:layout_constraintBottom_toBottomOf="@id/tv_id"/>
+    <TextView
+        android:id="@+id/tv_work"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:background="@drawable/ondutystyle"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:text="on"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@id/tv_time"
+        app:layout_constraintTop_toTopOf="@id/tv_id"
+        app:layout_constraintBottom_toBottomOf="@id/tv_id"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
