--- a/app/src/main/res/drawable-v24/greygreen_green_oval.xml
+++ b/app/src/main/res/drawable-v24/greygreen_green_oval.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval"
     android:useLevel="false">
     <solid android:color="@color/green" />
@@ -7,5 +8,4 @@
     <size
         android:width="15dp"
         android:height="15dp" />
-
 </shape>
