--- a/app/src/main/res/layout/fragment_bulletin.xml
+++ b/app/src/main/res/layout/fragment_bulletin.xml
@@ -26,7 +26,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|right"
-            android:layout_margin="16dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="67dp"
             android:backgroundTint="@color/theme"
             app:borderWidth="0dp"
             app:srcCompat="@drawable/round_add_24"/>
