--- a/app/src/main/res/layout/fragment_punch.xml
+++ b/app/src/main/res/layout/fragment_punch.xml
@@ -1,14 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".B_PunchFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    tools:context=".MainActivity">
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/topAppBar"
+                android:layout_width="match_parent"
+                android:layout_height="@android:dimen/app_icon_size"
+                app:title="打卡瀏覽"
+                app:titleTextColor="#FFFFFF"
+                android:background="@color/theme"
+                app:menu="@menu/nav_drawer_menu"
+                app:navigationIcon="@drawable/ic_menu"/>
+        </com.google.android.material.appbar.AppBarLayout>
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="200dp"
+            android:layout_height="607dp"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        </androidx.core.widget.NestedScrollView>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_marginTop="@android:dimen/app_icon_size">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView_punch"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            android:layout_marginBottom="60dp"/>
+    </FrameLayout>
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
