--- a/app/src/main/res/layout/fragment_bulletin.xml
+++ b/app/src/main/res/layout/fragment_bulletin.xml
@@ -18,7 +18,6 @@
                 app:title="公告"
                 app:titleTextColor="#FFFFFF"
                 android:background="@color/theme"
-                app:menu="@menu/nav_drawer_menu"
                 app:navigationIcon="@drawable/ic_menu"/>
         </com.google.android.material.appbar.AppBarLayout>
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -27,20 +26,16 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|right"
             android:layout_marginEnd="20dp"
-            android:layout_marginBottom="67dp"
+            android:layout_marginBottom="77dp"
             android:backgroundTint="@color/theme"
             app:borderWidth="0dp"
             app:srcCompat="@drawable/round_add_24"/>
-        <androidx.core.widget.NestedScrollView
-            android:layout_width="204dp"
-            android:layout_height="607dp"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
-        </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="67dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -53,18 +48,26 @@
             android:textSize="30sp"/>
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="550dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="130dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:background="@drawable/grey_framerectangle" />
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView_punch"
+            android:id="@+id/rcV_boss_bulletin"
             android:layout_width="match_parent"
-            android:layout_height="270dp"
+            android:layout_height="500dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginTop="140dp" />
+        <Button
+            android:id="@+id/btn_add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="650dp"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/greygreen_lightgreen_rectangle"
+            android:text="發布公告"/>
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
