--- a/app/src/main/res/layout/fragment_e__bulletin.xml
+++ b/app/src/main/res/layout/fragment_e__bulletin.xml
@@ -18,19 +18,14 @@
                 app:title="公告"
                 app:titleTextColor="#FFFFFF"
                 android:background="@color/theme"
-                app:menu="@menu/nav_drawer_menu"
                 app:navigationIcon="@drawable/ic_menu"/>
         </com.google.android.material.appbar.AppBarLayout>
-        <androidx.core.widget.NestedScrollView
-            android:layout_width="204dp"
-            android:layout_height="607dp"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
-        </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="67dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,37 +38,20 @@
             android:gravity="center_horizontal"
             android:textSize="30sp"/>
         <TextView
-            android:layout_width="390dp"
-            android:layout_height="285dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="130dp"
-            android:background="@drawable/grey_framerectangle" />
-        <ListView
-            android:id="@+id/diary_list2"
-            android:layout_marginTop="130dp"
-            android:layout_marginStart="20dp"
-            android:gravity="center_horizontal"
-            android:layout_width="380dp"
-            android:layout_height="280dp" />
-        <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:layout_marginTop="450dp"
-            android:text="個人通知"
-            android:textSize="30sp"/>
-        <TextView
-            android:layout_width="390dp"
-            android:layout_height="285dp"
+            android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="500dp"
+            android:layout_marginTop="130dp"
+            android:layout_marginStart="3dp"
+            android:layout_marginEnd="3dp"
             android:background="@drawable/grey_framerectangle" />
-        <ListView
-            android:id="@+id/diary_list3"
-            android:layout_marginTop="500dp"
-            android:layout_marginStart="20dp"
-            android:gravity="center_horizontal"
-            android:layout_width="380dp"
-            android:layout_height="280dp" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcV_employee_bulletin"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="7dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="140dp" />
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
