--- a/app/src/main/res/layout/fragment_e__punch.xml
+++ b/app/src/main/res/layout/fragment_e__punch.xml
@@ -19,14 +19,8 @@
                 app:title="打卡"
                 app:titleTextColor="#FFFFFF"
                 android:background="@color/theme"
-                app:menu="@menu/nav_drawer_menu"
                 app:navigationIcon="@drawable/ic_menu"/>
         </com.google.android.material.appbar.AppBarLayout>
-        <androidx.core.widget.NestedScrollView
-            android:layout_width="200dp"
-            android:layout_height="607dp"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
-        </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
     <FrameLayout
@@ -53,17 +47,38 @@
             android:textOff="下班"
             android:textSize="20sp"
             tools:ignore="UseSwitchCompatOrMaterialXml" />
-        <Button
-            android:id="@+id/btn_punch"
-            android:layout_width="200dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="130dp"
-            android:layout_gravity="center_horizontal"
-            android:background="@drawable/black_rectangle"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"
-            android:text="打卡"
-            android:textStyle="bold"/>
+            android:orientation="horizontal"
+            android:gravity="center"
+            >
+            <Button
+                android:id="@+id/btn_punch"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="130dp"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/black_rectangle"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                android:text="打卡"
+                android:textStyle="bold"/>
+            <Button
+                android:id="@+id/btn_delete"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="130dp"
+                android:layout_marginStart="20dp"
+                android:layout_gravity="center_horizontal"
+                android:background="@drawable/black_rectangle"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                android:text="刪除"
+                android:textStyle="bold"/>
+        </LinearLayout>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView_punch"
             android:layout_width="match_parent"
