--- a/app/src/main/res/layout/fragment_punch.xml
+++ b/app/src/main/res/layout/fragment_punch.xml
@@ -16,17 +16,11 @@
                 android:id="@+id/topAppBar"
                 android:layout_width="match_parent"
                 android:layout_height="@android:dimen/app_icon_size"
-                app:title="打卡瀏覽"
+                app:title="  打卡瀏覽"
                 app:titleTextColor="#FFFFFF"
                 android:background="@color/theme"
-                app:menu="@menu/nav_drawer_menu"
-                app:navigationIcon="@drawable/ic_menu"/>
+                app:menu="@menu/nav"/>
         </com.google.android.material.appbar.AppBarLayout>
-        <androidx.core.widget.NestedScrollView
-            android:layout_width="200dp"
-            android:layout_height="607dp"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
-        </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
     <FrameLayout
         android:layout_width="match_parent"
