change: bulletin complete

--- a/app/src/main/res/layout/fragment_e__salary.xml
+++ b/app/src/main/res/layout/fragment_e__salary.xml
@@ -40,7 +40,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="100dp">
             <TextView
-                android:id="@+id/tv_salary"
+                android:id="@+id/tv_salarys"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:gravity="center"
